--- a/webpages/register.html
+++ b/webpages/register.html
@@ -49,7 +49,7 @@
 
     <!-- Page Content -->
     <div class="container" ng-controller="RegisterController as register">
-        <div class="col-lg-6 top200">
+        <div class="col-md-6 top200">
             <h1 class="col-lg-12 well">Registration Form</h1>
             <div class="col-lg-12 well">
                 <form name="registrationForm">    
