--- a/webpages/settings.html
+++ b/webpages/settings.html
@@ -25,6 +25,7 @@
 
     <!-- Angular -->
     <script type="text/JavaScript" src="/js/angular.min.js"></script>
+    <script type="text/JavaScript" src="/js/angular-messages.js"></script>
     <script type="text/JavaScript" src="/js/headerController.js"></script>
     <script type="text/JavaScript" src="/js/looseTemplates.js"></script>
     <script type="text/JavaScript" src="/js/settingsApp.js"></script>
@@ -42,7 +43,7 @@
 
 </head>
 
-<body ng-app="SettingsPage">
+<body ng-app="SettingsPage" ng-cloak>
 
     <div id="wrapper">
 
@@ -176,7 +177,7 @@
                 <li ng-class="{ active: header.isActive('/merch')}">
                     <a href="/merch" target="_self"><span class="glyphicon glyphicon-shopping-cart"></span> Merch and Membership</a>
                 </li>
-                <li class="dropdown" ng-hide="{{header.isLoggedIn()}}" ng-cloak>
+                <li class="dropdown" ng-hide="{{header.isLoggedIn()}}" >
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
                     <ul id="login-dp" class="dropdown-menu">
                         <li>
@@ -211,7 +212,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="dropdown" ng-show="{{header.isLoggedIn()}}" ng-hide="true" ng-cloak>
+                <li class="dropdown" ng-show="{{header.isLoggedIn()}}" ng-hide="true" >
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
                     <ul class="dropdown-menu alert-dropdown">
                         <li>
@@ -238,7 +239,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="dropdown" ng-show="{{header.isLoggedIn()}}" ng-cloak>
+                <li class="dropdown" ng-show="{{header.isLoggedIn()}}" >
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                         <b>Name here <span class="caret"></span></b>
                     </a>
@@ -327,10 +328,10 @@
             <div class="container-fluid" ng-controller="SettingsController as settings">
 
                 <!-- Page Heading -->
-                <div class="row">
+                <div class="row" >
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Welcome,  {{settings.obtainedFirstName}}! <small>Settings</small>
+                            Welcome,  {{settings.obtainedFirstName}}! <small>Here are your settings.</small>
                         </h1>
                         <!-- <ol class="breadcrumb">
                             <li class="active">
@@ -340,23 +341,64 @@
                     </div>
                 </div>
 
-                <div class="row" ng-controller="UpdateInfoController as update">
+                <!-- See active memberships -->
+                <div class="row" ng-controller="MembershipController as memberships">
                     <div class="col-md-3">
                         <h2>
-                            Change your information
+                            Membership Information
+                            <p>
+                            <small>See what you're a member of, buy membership, so on. </small>
+                        </h2>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row well" ng-repeat="club in memberships.clubs">
+                            <div class="col-sm-3">
+                                <img ng-src="{{club.clubLogoUrl}}" class="image-fill">
+                            </div>
+                            <div class="col-sm-4">
+                                <a ng-href="{{'/about?team=' + club.clubId}}" target="_self">{{club.clubName}}</a>
+                            </div>
+                            <div class="col-sm-5">
+                                <div ng-show="club.isMember">
+                                    <div class="alert alert-success text-center" role="alert">
+                                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                                        Active member!
+                                    </div>
+                                    <!-- <button type="button" class="btn btn-lg btn-primary" disabled>Active member!</button> -->
+                                </div>
+                                <div ng-hide="club.isMember">
+                                    <div class="alert alert-info text-center" role="alert" ng-href="{{'/item?item=' + club.membershipStoreId}}" target="_self">
+                                        <a ng-href="{{'/item?item=' + club.membershipStoreId}}" target="_self">
+                                            <span class="glyphicon glyphicon-shopping-cart"></span>
+                                            Not currently a member.
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Update Info -->
+                <div class="row" ng-controller="UpdateInfoController as update" >
+                    <div class="col-md-3">
+                        <h2>
+                            Change your Information
+                            <p>
                             <small>Anything left blank won't be changed. </small>
                         </h2>
-                        <div class="alert alert-danger" role="alert" ng-hide="true">
+                        <div class="alert alert-danger" role="alert" ng-show="update.passwordIncorrect == true">
                             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                             <span class="sr-only">Error:</span>
                             Password is not correct. 
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <form name="updateForm">    
+                        <form name="updateForm">
+                            {{updateForm.$valid}}
                             <!-- http://stackoverflow.com/questions/31127532/validate-custom-directive-using-ngmessages -->
                             <!-- Username and Password info -->
-                            <!-- Username -->
+                            <!-- Current Password -->
                             <div class="row">
                                 <div class="col-sm-12 form-group" ng-class="{'has-error': (updateForm.currentPassword.$invalid && updateForm.currentPassword.$touched) ,
                                                                              'has-success': (updateForm.currentPassword.$valid && updateForm.currentPassword.$touched)}">
@@ -378,13 +420,14 @@
                                     >
                                 </div>
                             </div>
-                            <!-- Password -->
+                            <!-- New Password -->
                             <div class="row">
-                                <div class="col-sm-12 form-group" ng-class="{'has-error': (updateForm.newPassword.$invalid && updateForm.newPassword.$touched) ,
-                                                                             'has-success': (updateForm.newPassword.$valid && updateForm.newPassword.$touched)}">
+                                <div class="col-sm-12 form-group" ng-class="{'has-error': (updateForm.newPassword.$invalid && updateForm.newPassword.$dirty) ,
+                                                                             'has-success': (updateForm.newPassword.$valid && updateForm.newPassword.$dirty)}">
                                     <label class="control-label">New Password</label>
                                     <p class="form-text text-muted">At least 10 characters long.</p>
-                                    <div ng-messages="updateForm.newPassword.$error" style="color:maroon" role="alert" ng-hide="updateForm.newPassword.$untouched">
+                                    <div ng-messages="updateForm.newPassword.$error" style="color:maroon" role="alert" 
+                                            ng-hide="updateForm.newPassword.$pristine || updateForm.newPassword.$untouched">
                                         <div class="alert alert-danger" role="alert" ng-message="required">
                                             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                                             <span class="sr-only">Error:</span>
@@ -408,10 +451,11 @@
                             </div>
                             <!-- Confirm password -->
                             <div class="row">
-                                <div class="col-sm-12 form-group" ng-class="{'has-error': updateForm.confirmpass.$invalid && updateForm.confirmpass.$touched,
-                                                                             'has-success': updateForm.confirmpass.$valid && updateForm.confirmpass.$touched}">
+                                <div class="col-sm-12 form-group" ng-class="{'has-error': updateForm.confirmpass.$invalid && updateForm.confirmpass.$dirty,
+                                                                             'has-success': updateForm.confirmpass.$valid && updateForm.confirmpass.$dirty}">
                                     <label class="control-label">Confirm Password</label>
-                                    <div ng-messages="updateForm.confirmpass.$error" style="color:maroon" role="alert" ng-hide="updateForm.confirmpass.$untouched">
+                                    <div ng-messages="updateForm.confirmpass.$error" style="color:maroon" role="alert" 
+                                            ng-hide="updateForm.confirmpass.$pristine || updateForm.confirmpass.$untouched">
                                         <div class="alert alert-danger" role="alert" ng-message="required">
                                             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                                             <span class="sr-only">Error:</span>
@@ -428,7 +472,7 @@
                                         class="form-control" 
                                         ng-model="update.confirmPassword"
                                         name="confirmpass"
-                                        ng-verify-matches="update.password"
+                                        ng-verify-matches="update.newPassword"
                                     >
                                 </div>
                             </div>
@@ -436,8 +480,8 @@
 
                             <!-- Demographic Info -->
                             <div class="row">
-                                <div class="col-sm-6 form-group" ng-class="{'has-error': updateForm.firstname.$invalid && updateForm.firstname.$touched,
-                                                                            'has-success': updateForm.firstname.$valid && updateForm.firstname.$touched}">
+                                <div class="col-sm-6 form-group" ng-class="{'has-error': updateForm.firstname.$invalid && updateForm.firstname.$dirty,
+                                                                            'has-success': updateForm.firstname.$valid && updateForm.firstname.$dirty}">
                                     <label class="control-label">First Name</label>
                                     <input type="text" 
                                         placeholder="Enter First Name Here..." 
@@ -447,8 +491,8 @@
                                         name="firstname"
                                     >
                                 </div>
-                                <div class="col-sm-6 form-group" ng-class="{'has-error': updateForm.lastname.$invalid && updateForm.lastname.$touched,
-                                                                            'has-success': updateForm.lastname.$valid && updateForm.lastname.$touched}">
+                                <div class="col-sm-6 form-group" ng-class="{'has-error': updateForm.lastname.$invalid && updateForm.lastname.$dirty,
+                                                                            'has-success': updateForm.lastname.$valid && updateForm.lastname.$dirty}">
                                     <label class="control-label">Last Name</label>
                                     <input type="text" 
                                         placeholder="Enter Last Name Here..." 
@@ -460,10 +504,11 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-sm-6 form-group" ng-class="{'has-error': updateForm.uid.$invalid && updateForm.uid.$touched,
-                                                                            'has-success': updateForm.uid.$valid && updateForm.uid.$touched}">
+                                <div class="col-sm-6 form-group" ng-class="{'has-error': updateForm.uid.$invalid && updateForm.uid.$dirty,
+                                                                            'has-success': updateForm.uid.$valid && updateForm.uid.$dirty}">
                                     <label class="control-label">UID</label>
-                                    <div ng-messages="updateForm.uid.$error" style="color:maroon" role="alert" ng-hide="updateForm.uid.$untouched">
+                                    <div ng-messages="updateForm.uid.$error" style="color:maroon" role="alert" 
+                                            ng-hide="updateForm.uid.$pristine || updateForm.uid.$untouched">
                                         <div class="alert alert-danger" role="alert" ng-message="minlength">
                                             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                                             <span class="sr-only">Error:</span>
@@ -484,8 +529,8 @@
                                         maxlenght="9"
                                     >
                                 </div>
-                                <div class="col-sm-6 form-group" ng-class="{'has-error': updateForm.gradyear.$invalid && updateForm.gradyear.$touched,
-                                                                            'has-success': updateForm.gradyear.$valid && updateForm.gradyear.$touched}">
+                                <div class="col-sm-6 form-group" ng-class="{'has-error': updateForm.gradyear.$invalid && updateForm.gradyear.$dirty,
+                                                                            'has-success': updateForm.gradyear.$valid && updateForm.gradyear.$dirty}">
                                     <label class="control-label">Graduation Year</label>
                                     <select class="form-control" ng-model="update.gradYear" name="gradyear">
                                         <option value="2016">2016</option>
