Cart and checkout begins. Cart done.

--- a/webpages/htmltemplates/navbar.html
+++ b/webpages/htmltemplates/navbar.html
@@ -102,7 +102,7 @@
                         <li><a href="/settings" target="_self"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a></li>
                         <li><a href="#"><i class="fa fa-trophy" aria-hidden="true"></i> Upcoming Tourmanents</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></i> Cart</a></li>
+                        <li><a href="/cart" target="_self"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></i> Cart</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log Out</a></li>
                     </ul>
