--- a/webpages/cart.html
+++ b/webpages/cart.html
@@ -94,7 +94,7 @@
                         <td><a href="/merch" target="_self" class="btn btn-info"><i class="fa fa-angle-left"></i> Return to Store</a></td>
                         <td colspan="2" class="hidden-xs"></td>
                         <td class="hidden-xs text-center"><strong>Total: {{cart.total | currency}}</strong></td>
-                        <td><a href="#" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
+                        <td><a href="/checkout" target="_self" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
                     </tr>
                 </tfoot>
             </table>
