--- a/webpages/item.html
+++ b/webpages/item.html
@@ -50,6 +50,10 @@
 
         <div class="row">
 
+            <div class="row alert alert-success" ng-show="item.showAdded">
+                Item added to cart!
+            </div>
+
             <merch-sidebar id="15"></merch-sidebar>
 
             <div class="col-md-9">
