--- a/webpages/htmltemplates/navbar/navbar.html
+++ b/webpages/htmltemplates/navbar/navbar.html
@@ -14,7 +14,7 @@
         </div> -->
         <navigation-bar-header></navigation-bar-header>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
             <navigation-bar-top></navigation-bar-top>
         </div>
         <!-- /.navbar-collapse -->
